--- a/style.css
+++ b/style.css
@@ -1,36 +1,31 @@
+body {
+    font-family: Inknut Antiqua;
+    text-align: center;
+}
+
 .button {
-    width: 100px;
-    height: 50px;
+    width: 250px;
+    height: 60px;
     background-color: blue;
-    transition: width 2s;
     border-radius: 5%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
 }
 
-h1 {
-    color: black;
-    opacity: 1;
-    font-size: 30px;
-}
-
-.button:hover {
-    width: 200px;
-}
-
-h1:hover {
-    opacity: 1;
-}
 
 .navbar {
     background-color: aqua;
-    width: 100px;
-    height: 100vh;
+    width: 100%;
+    height: 100px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     
 }
 
 #title {
-    text-align: center;
     font-size: 64px;
 }
 
@@ -41,4 +36,24 @@ h1:hover {
 img {
     width: 100px;
     height: 100px;
+}
+
+.upper {
+    display: flex;
+    flex-direction: columns;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.lower {
+    display: inline-block;
+}
+
+/* p {
+    width: 50%;
+} */
+
+a {
+    color: black;
+    text-decoration: none;
 }
