--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 body {
     font-family: Inknut Antiqua;
     text-align: center;
+    background-color: #edf2fb;
 }
 
 .button {
     width: 250px;
     height: 60px;
-    background-color: blue;
+    background-color: #023047;
     border-radius: 5%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
 }
 
 
 .navbar {
-    background-color: aqua;
+    background-color: #219ebc;
     width: 100%;
     height: 100px;
     display: flex;
@@ -33,27 +33,40 @@ body {
     border-bottom: solid black 4px;
 }
 
+h2 {
+    padding-top: 50px;
+}
+
 img {
-    width: 100px;
-    height: 100px;
+    width: 400px;
+    height: 400px;
+    margin-top: 100px;
+    border-radius: 5%;
 }
 
 .upper {
     display: flex;
-    flex-direction: columns;
-    justify-content: space-around;
+    justify-content: center;
+}
+
+#first-image {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.lower {
-    display: inline-block;
+#second-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-/* p {
-    width: 50%;
-} */
+
+p {
+    width: 80%;
+}
 
 a {
-    color: black;
+    color: white;
     text-decoration: none;
 }
