--- a/style.css
+++ b/style.css
@@ -12,13 +12,19 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    transition: width 1s, height, 1s;
+}
+
+.button:hover {
+    width: 280px;
+    height: 80px;
 }
 
 
 .navbar {
     background-color: #219ebc;
     width: 100%;
-    height: 100px;
+    height: 110px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -42,6 +48,12 @@ img {
     height: 400px;
     margin-top: 100px;
     border-radius: 5%;
+    transition: width 2s, height 2s;
+}
+
+img:hover {
+    width: 450px;
+    height: 450px;
 }
 
 .upper {
