--- a/style.css
+++ b/style.css
@@ -82,3 +82,26 @@ a {
     color: white;
     text-decoration: none;
 }
+
+.gallery {
+    display: flex;
+    justify-content: center;
+}
+
+/* #gallery-row-one {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#gallery-row-two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#gallery-row-three {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
