--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     width: 250px;
     height: 60px;
     background-color: #023047;
-    border-radius: 5%;
+    border-radius: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,6 +30,17 @@ body {
     justify-content: space-around;
     align-items: center;
     
+}
+
+.footer {
+    background-color: #023047;
+    width: 100%;
+    height: 110px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: solid black 4px;
+    margin-top: 100px;
 }
 
 #title {
